--- a/ltconfig.in
+++ b/ltconfig.in
@@ -2669,7 +2669,7 @@ need_lib_prefix=$need_lib_prefix
 need_version=$need_version
 
 # Whether dlopen is supported.
-dlopen=$enable_dlopen
+dlopen_support=$enable_dlopen
 
 # Whether dlopen of programs is supported.
 dlopen_self=$enable_dlopen_self
