* ltcf-cxx.sh: Added some untested HPUX aCC support. * ltmain.in: Inadvertently removed some of the tags patch. * tagdemo/Makefile.am, tagdemo/Makefile.in, tagdemo/README, tagdemo/acinclude.m4, tagdemo/aclocal.m4, tagdemo/configure, tagdemo/configure.in, tagdemo/foo.cpp, tagdemo/foo.h, tagdemo/main.cpp: *sigh* I checked this directory into the HEAD branch instead of the multi-language-branch. Reported by Stephan Kulow <coolo@kde.org>

--- a/ltmain.in
+++ b/ltmain.in
@@ -4616,6 +4616,7 @@ Provide generalized library-building support services.
     --mode=MODE       use operation mode MODE [default=inferred from MODE-ARGS]
     --quiet           same as \`--silent'
     --silent          don't print informational messages
+    --tag=TAG         use configuration variables from tag TAG
     --version         print version information
 
 MODE must be one of the following:
@@ -4788,6 +4789,14 @@ echo
 $echo "Try \`$modename --help' for more information about other modes."
 
 exit 0
+
+### BEGIN LIBTOOL TAG CONFIG: disable-shared
+build_libtool_libs=no
+### END LIBTOOL TAG CONFIG: disable-shared
+
+### BEGIN LIBTOOL TAG CONFIG: disable-static
+build_old_libs=no
+### END LIBTOOL TAG CONFIG: disable-static
 
 # Local Variables:
 # mode:shell-script
