* ltconfig.in (available_tags): The name of each newly added tagged configuration is appended to this list.  This is done at ltconfig time so that the generated `libtool' script need not determine which tags it supports everytime it is used.  The available_tags variable is used by `ltmain.in' to iterate over each of the tagged configurations when attempting to automatically choose which one to use for the supplied compile/link command. * ltmain.in: Added ability to automatically determine which tagged configuration to use based on the compiler found in the supplied base compile command. (available_tags): This new variable contains a list of available tagged configurations.  This gets generated at ltconfig time. (object_name, old_object): Renamed these to pic_object and non_pic_object, respectively. * doc/libtool.texi (Configuration tags): Updated documentation. Libtool now has the ability to infer which tagged configuration to use based on the compiler found in the supplied base compile command. * tagdemo/configure.in, tagdemo/configure: Removed explicit substitution of "--tag=CXX" in $LIBTOOL.  The newly added automatic selection of tagged configurations obviates the need to explicitly specify which tag to use.

--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1985,6 +1985,9 @@ Xsed="sed -e s/^X//"
 # if CDPATH is set.
 if test "X\${CDPATH+set}" = Xset; then CDPATH=:; export CDPATH; fi
 
+# The names of the tagged configurations supported by this script.
+available_tags=
+
 ### BEGIN LIBTOOL CONFIG
 EOF
   else
@@ -2490,6 +2493,26 @@ EOF
   echo "FIXME: would compile $ltmain"
   ;;
 esac
+
+# Update the list of available tags.
+if test -n "$tagname"; then
+
+  # Extract list of available tagged configurations in $ofile.
+  # Note that this assumes the entire list is on one line.
+  available_tags=`grep "^available_tags=" $ofile | sed -e 's/available_tags=\(.*$\)/\1/' -e 's/\"//g'`
+
+  # Append the new tag name to the list of available tags.
+  available_tags="$available_tags $tagname"
+
+  # Now substitute the updated of available tags.
+  if eval "sed -e 's/^available_tags=.*\$/available_tags=\"$available_tags\"/' ${ofile} > ${ofile}.new"; then
+    mv ${ofile}.new ${ofile}
+  else
+    rm -f ${ofile}.new
+    echo "$progname: unable to update list of available tagged configurations."
+    exit 1
+  fi
+fi
 
 # Don't cache tagged configuration!
 test -n "$cache_file" && test -z "$tagname" || exit 0
