* ltcf-cxx.sh (predeps, postdeps, predep_objects, postdep_objects): Split {pre,post}deps into a variable that hold library dependencies and another that holds objects needed during shared library generation.  This was needed so that the objects needed for shared library generation do not get analyzed by the ILD mechanism.  The objects are only used during the initial creation of the shared library, not during subsequent links to that library. (archive_cmds, archive_expsym_cmds): Added $predep_objects before all objects and libraries, and $postdep_objects after them.  This is necessary when linking C++ shared libraries. (output_verbose_link_cmds): Added shared library generation compiler flag.  The objects and libraries the compiler links when creating shared libraries may be different than those used when linking programs, particulary for object files. * ltconfig.in (predep_objects, postdep_objects): Include these variables in the generated libtool script. * ltmain.in: Quote regular expression used for automatic tagged configuration selection.  Also improved the regular expression used for matching. Updated clean mode to work properly with the new `.lo' files. (libs): Only add $predeps and $postdeps to the list of dependency libraries when linking a library. * tagdemo/Makefile.am (noinst_LTLIBRARIES): Added another test library that depends on the existing test library.  It was added to exercise the ILD mechanism when using tagged configurations. (tagdemo_LDADD): The tagdemo program now depends on the new test library.  Since the new test library depends on the previous one, the previous library should be linked to the program as well. * Makefile.in: Regenerated from updated Makefile.am. * tagdemo/baz.cpp, tagdemo/baz.h: Added these sources.  They are new test library sources. * tagdemo/main.cpp (main): Added call to method in new test library.

--- a/ltconfig.in
+++ b/ltconfig.in
@@ -218,6 +218,8 @@ cache_file=
 ld_shlibs=yes
 
 ## Dependencies to place before and after the object being linked:
+predep_objects=
+postdep_objects=
 predeps=
 postdeps=
 
@@ -1915,7 +1917,7 @@ case "$ltmain" in
     RANLIB old_archive_cmds old_archive_from_new_cmds old_postinstall_cmds \
     old_postuninstall_cmds archive_cmds archive_expsym_cmds postinstall_cmds \
     postuninstall_cmds extract_expsyms_cmds old_archive_from_expsyms_cmds \
-    predeps postdeps \
+    predep_objects postdep_objects predeps postdeps \
     old_striplib striplib file_magic_cmd export_symbols_cmds \
     deplibs_check_method allow_undefined_flag no_undefined_flag \
     finish_cmds finish_eval global_symbol_pipe global_symbol_to_cdecl \
@@ -2179,10 +2181,20 @@ postuninstall_cmds=$postuninstall_cmds
 old_striplib=$old_striplib
 striplib=$striplib
 
-# Dependencies to place before the object being linked.
+# Dependencies to place before the objects being linked to create a
+# shared library.
+predep_objects=$predep_objects
+
+# Dependencies to place after the objects being linked to create a
+# shared library.
+postdep_objects=$postdep_objects
+
+# Dependencies to place before the objects being linked to create a
+# shared library.
 predeps=$predeps
 
-# Dependencies to place after the object being linked.
+# Dependencies to place after the objects being linked to create a
+# shared library.
 postdeps=$postdeps
 
 # Method to check whether dependent libraries are shared objects.
