--- a/tagdemo/Makefile.in
+++ b/tagdemo/Makefile.in
@@ -85,17 +85,21 @@ AUTOMAKE_OPTIONS = no-dependencies foreign
 
 EXTRA_DIST = acinclude.m4
 
-noinst_LTLIBRARIES = libfoo.la
+noinst_LTLIBRARIES = libfoo.la libbaz.la
 
 libfoo_la_SOURCES = foo.cpp
 libfoo_la_LIBADD = $(LIBM)
 
-noinst_HEADERS = foo.h
+# Test some of the ILD support when using tagged configurations.
+libbaz_la_SOURCES = baz.cpp
+libbaz_la_LIBADD = libfoo.la
+
+noinst_HEADERS = foo.h baz.h
 
 bin_PROGRAMS = tagdemo
 
 tagdemo_SOURCES = main.cpp
-tagdemo_LDADD = libfoo.la
+tagdemo_LDADD = libbaz.la
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 mkinstalldirs = $(SHELL) $(top_srcdir)/../mkinstalldirs
 CONFIG_CLEAN_FILES = 
@@ -109,11 +113,14 @@ LIBS = @LIBS@
 libfoo_la_LDFLAGS = 
 libfoo_la_DEPENDENCIES = 
 libfoo_la_OBJECTS =  foo.lo
+libbaz_la_LDFLAGS = 
+libbaz_la_DEPENDENCIES =  libfoo.la
+libbaz_la_OBJECTS =  baz.lo
 bin_PROGRAMS =  tagdemo$(EXEEXT)
 PROGRAMS =  $(bin_PROGRAMS)
 
 tagdemo_OBJECTS =  main.$(OBJEXT)
-tagdemo_DEPENDENCIES =  libfoo.la
+tagdemo_DEPENDENCIES =  libbaz.la
 tagdemo_LDFLAGS = 
 CXXFLAGS = @CXXFLAGS@
 CXXCOMPILE = $(CXX) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
@@ -130,8 +137,8 @@ DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
 
 TAR = tar
 GZIP_ENV = --best
-SOURCES = $(libfoo_la_SOURCES) $(tagdemo_SOURCES)
-OBJECTS = $(libfoo_la_OBJECTS) $(tagdemo_OBJECTS)
+SOURCES = $(libfoo_la_SOURCES) $(libbaz_la_SOURCES) $(tagdemo_SOURCES)
+OBJECTS = $(libfoo_la_OBJECTS) $(libbaz_la_OBJECTS) $(tagdemo_OBJECTS)
 
 all: all-redirect
 .SUFFIXES:
@@ -206,6 +213,9 @@ maintainer-clean-libtool:
 
 libfoo.la: $(libfoo_la_OBJECTS) $(libfoo_la_DEPENDENCIES)
 	$(CXXLINK)  $(libfoo_la_LDFLAGS) $(libfoo_la_OBJECTS) $(libfoo_la_LIBADD) $(LIBS)
+
+libbaz.la: $(libbaz_la_OBJECTS) $(libbaz_la_DEPENDENCIES)
+	$(CXXLINK)  $(libbaz_la_LDFLAGS) $(libbaz_la_OBJECTS) $(libbaz_la_LIBADD) $(LIBS)
 
 mostlyclean-binPROGRAMS:
 
