* configure.in: Due to a bug in autoconf-2.13 implementation of AC_SUBST, `AC_SUBST(FILE)' can never work.  Use MAGIC as the holder of the command to run in file_magic_cmd instead. * ltconfig.in: s/FILE/MAGIC/g. * libtool.m4 (AC_PROG_LIBTOOL): set MAGIC in the environment when calling ltconfig. (AC_PATH_MAGIC):  renamed from AC_PATH_FILE. (AC_PATH_TOOL_PREFIX):  s/FILE/MAGIC/g.  Also set file_magic_cmd to '${MAGIC}' so that make can grok it. * Makefile.am (libtool): (clibtool): ditto.

--- a/configure.in
+++ b/configure.in
@@ -49,7 +49,7 @@ dnl Check for dlopen support
 AC_LIBTOOL_DLOPEN
 AC_LIBTOOL_SETUP
 AC_SUBST(DLLTOOL)
-AC_SUBST(FILE)
+AC_SUBST(MAGIC)
 AC_SUBST(OBJDUMP)
 AC_SUBST(AS)
 AC_SUBST(reload_flag)
