--- a/ltconfig.in
+++ b/ltconfig.in
@@ -524,7 +524,7 @@ test -z "$AR" && AR=ar
 test -z "$AS" && AS=as
 test -z "$CC" && CC=cc
 test -z "$DLLTOOL" && DLLTOOL=dlltool
-test -z "$FILE" && FILE=file
+test -z "$MAGIC" && MAGIC=file
 test -z "$LD" && LD=ld
 test -z "$LN_S" && LN_S="ln -s"
 test -z "$NM" && NM=nm
