--- a/mdemo/Makefile.am
+++ b/mdemo/Makefile.am
@@ -6,7 +6,7 @@ INCLUDES = $(INCLTDL)
 
 EXTRA_DIST = acinclude.m4
 
-lib_LTLIBRARIES = foo1.la libfoo2.la
+lib_LTLIBRARIES = foo1.la libfoo2.la libsub.la
 
 foo1_la_SOURCES = foo1.c
 foo1_la_LIBADD = $(LIBM)
@@ -15,6 +15,9 @@ foo1_la_LDFLAGS = -no-undefined -module -avoid-version
 libfoo2_la_SOURCES = foo2.c
 libfoo2_la_LIBADD = $(LIBM)
 libfoo2_la_LDFLAGS = -no-undefined -module -export-symbols-regex "libfoo2.*"
+
+libsub_la_SOURCES = sub.c
+libsub_la_LDFLAGS = -no-undefined
 
 noinst_HEADERS = foo.h
 
@@ -33,13 +36,13 @@ bin_PROGRAMS = mdemo mdemo.static
 mdemo_SOURCES = main.c
 mdemo_LDFLAGS = -export-dynamic
 ## The quotes around -dlopen below fool automake into accepting it
-mdemo_LDADD = @LIBLTDL@ "-dlopen" self \
+mdemo_LDADD = @LIBLTDL@ libsub.la "-dlopen" self \
 		"-dlopen" foo1.la "-dlopen" libfoo2.la
-mdemo_DEPENDENCIES = @LIBLTDL@ foo1.la libfoo2.la
+mdemo_DEPENDENCIES = @LIBLTDL@ libsub.la foo1.la libfoo2.la
 
 # Create a statically linked version of mdemo.
 mdemo_static_SOURCES = $(mdemo_SOURCES)
-mdemo_static_LDFLAGS = $(STATIC) $(mdemo_LDFLAGS)
+mdemo_static_LDFLAGS = $(mdemo_LDFLAGS) -static
 mdemo_static_LDADD = $(mdemo_LDADD)
 mdemo_static_DEPENDENCIES = $(mdemo_DEPENDENCIES)
 
